pages/home-page.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.navigation-bar{
    background-color: #FED944;
    height: 100px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px;
}

.logo{
    max-width: 100%;
}

.text{
    text-align: center;
    display: flex;
    gap: 40px;
    flex-wrap: wrap;
}

.nav-bar-image{
    position: relative; /*retains size*/
    max-width: 100%;
    height: auto;
    max-width: 100%;
}

.link-properties{
    font-family: Sinhala Sangam MN;
    text-decoration: none; /*removes underline*/
    color: #1E424E;
    font-size: 20px;
    font-weight: bold;
    text-align: center;
}
.hero-text{
    flex-direction: column;
}

.hero{
    height: 400px;
    width: 100%;
    background-color: #FFDB77;
    justify-content: space-between;
    display: flex;
    align-items: center;
}

.hero-text h1{
    text-align: left;
    padding-left: 40px;
    padding-top: 50px;
    font-size: 50px;
    font-family: skia;
}

.hero-text p{
    padding-left: 40px;
    font-size: 20px;
    font-family: Sinhala Sangam MN;
} 

.button{
    display: flex;
    height: auto;
    width: 150px;
    background-color: #E19E11;
    margin-left: 40px;
    border-radius: 10px;
    justify-content: center;
}

.button p{
    font-family: Sinhala Sangam MN;
    font-size: 20px;
    text-align: center;
}

.hero-images img{
    position: relative;
    width: 200px;
    height: auto;
    object-fit: contain;
    margin: 0;

}

.hero-images{
    display: flex;
}

.awards{
    height: 400px;
    width: 100%;
    background-color: #FFFBF2;
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    row-gap: 10px;
}

.awards h2{
    font-size: 50px;
}

.awards p{
    font-size: 20px;
    font-family:Sinhala Sangam MN;
    text-align: center;
}

.image_awards{
   max-width: 100%;
   height: auto;
   display: flex;
   flex-direction: row;
   gap: 40px;
}

.image_awards img{
    width: 200px;
}
.global_winner{
    text-align: center;
}
.business_awards{
    text-align: centers;
}

.finalist{
    text-align: center;
}

